[tool.poetry]
name = "PopCatAPIWrapper"
version = "0.0.8"
description = "PopCatWrapper is an asynchronous wrapper for https://popcat.xyz/api"
authors = ["Infernum1"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Infernum1/PopCatWrapper"

[tool.poetry.dependencies]
python = ">=3.10"
aiohttp = "^3.7.2"
furo = "^2022.9.29"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38']
